--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -17,14 +17,17 @@ jobs:
     steps:
      - name: 'Checkout'
        uses: actions/checkout@main
+       
+     - name: 'echo'
+       run: echo "$CI_RUN_NUMBER"
 
      - name: 'docker login'
        run: docker login -u  $DOCKER_USER -p $DOCKER_PASSWORD
 
 
      - name: "Build"
-       run: docker build -t $DOCKER_USER/IMAGE_NAME:1.$CI_RUN_NUMBER .
+       run: docker build -t $DOCKER_USER/IMAGE_NAME:1 .
             
        
      - name: "Push"
-       run: docker push $DOCKER_USER/IMAGE_NAME:1.$CI_RUN_NUMBER 
+       run: docker push $DOCKER_USER/IMAGE_NAME:1
