--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -19,15 +19,15 @@ jobs:
        uses: actions/checkout@main
        
      - name: 'echo'
-       run: echo "$CI_RUN_NUMBER"
+       run: echo " $CI_RUN_NUMBER" 
 
      - name: 'docker login'
        run: docker login -u  $DOCKER_USER -p $DOCKER_PASSWORD
 
 
      - name: "Build"
-       run: docker build -t $DOCKER_USER/IMAGE_NAME:1 .
+       run: docker build -t $DOCKER_USER/$IMAGE_NAME:1 .
             
        
      - name: "Push"
-       run: docker push $DOCKER_USER/IMAGE_NAME:1
+       run: docker push $DOCKER_USER/$IMAGE_NAME:1
