--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -34,6 +34,7 @@ jobs:
        run: docker push $DOCKER_USER/$IMAGE_NAME:1.0
   CD:
     name: CD
+    needs: [CI]
     runs-on: ubuntu-latest
     steps:
     - name: executing remote ssh commands using password
