--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -36,7 +36,11 @@ jobs:
     name: CD
     needs: [CI]
     runs-on: ubuntu-latest
+   
     steps:
+    - name: 'Checkout'
+      uses: actions/checkout@main
+
     - name: executing remote ssh commands using password
       uses: dawidd6/action-ansible-playbook@v2
       with:
