--- a/app_deploy_to_ec2.yml
+++ b/app_deploy_to_ec2.yml
@@ -2,10 +2,8 @@
 - name: Test connection to my servers
   hosts: all
   become: yes
- # become_method: su
   become_user: ubuntu
-  tasks:
+  
 
-  - name: Ping my servers
-    shell: echo "Hello world!"
-    
+  roles:
+     - role: docker_install
