--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -49,8 +49,8 @@ jobs:
         key: ${{ env.AWS_EC2_KEY }}
         inventory: |
            [all]
-           appserver ansible_host=18.195.101.221 ansible_user=ubuntu ansible_ssh_private_key_file=${{ env.AWS_EC2_KEY }}
-        known_hosts: .known_hosts
+           appserver ansible_host=18.195.101.221 ansible_ssh_user=ubuntu ansible_ssh_private_key_file=${{ env.AWS_EC2_KEY }}
+        #known_hosts: .known_hosts
         #options: |
         #  --inventory hosts
 
