--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -47,7 +47,7 @@ jobs:
         #playbook: ${{ env.PLAYBOOK}}
         playbook: app_deploy_to_ec2.yml
         directory: /.
-        key: ${{ env.AWS_EC2_KEY }}
+        #key: ${{ env.AWS_EC2_KEY }}
         inventory: |
            [all]
            appserver ansible_host=18.195.101.221 ansible_ssh_user=ubuntu ansible_ssh_private_key_file=${{ env.AWS_EC2_KEY }}
