--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -44,14 +44,14 @@ jobs:
     - name: executing remote ssh commands using password
       uses: dawidd6/action-ansible-playbook@v2
       with:
-        #playbook: ${{ env.PLAYBOOK}}
-        playbook: app_deploy_to_ec2.yml
+        playbook: ${{ env.PLAYBOOK }}
+        #playbook: app_deploy_to_ec2.yml
         directory: /.
         key: ${{ env.AWS_EC2_KEY }}
-        inventory: |
-           [all]
-           appserver ansible_host=18.195.101.221 ansible_ssh_user=ubuntu ansible_ssh_private_key_file=${{ env.AWS_EC2_KEY }}
-        #known_hosts: .known_hosts
+        inventory: ./hosts
+        #    [all]
+        #    appserver ansible_host=18.195.101.221 ansible_ssh_user=ubuntu ansible_ssh_private_key_file=${{ env.AWS_EC2_KEY }}
+        # #known_hosts: .known_hosts
         #options: |
         #  --inventory hosts
 
