--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -47,19 +47,14 @@ jobs:
         playbook: ${{ env.PLAYBOOK }}
         #playbook: app_deploy_to_ec2.yml
         directory: /.
-        key: ${{ env.AWS_EC2_KEY }}
-        inventory: ./hosts
-        #    [all]
-        #    appserver ansible_host=18.195.101.221 ansible_ssh_user=ubuntu ansible_ssh_private_key_file=${{ env.AWS_EC2_KEY }}
-        # #known_hosts: .known_hosts
-        #options: |
-        #  --inventory hosts
+        #key: ${{ env.AWS_EC2_KEY }}
+        inventory: |
+       
 
-        # |
-        #   [all]
-        #   appserver ansible_host=18.195.101.221 ansible_user=ubuntu ansible_ssh_private_key_file=${{ env.AWS_EC2_KEY }}
-        # port: ${{ secrets.PORT }}
-        # script: whoami
+        
+          [all]
+          appserver ansible_host=18.195.101.221 ansible_user=ubuntu ansible_ssh_private_key_file=${{ env.AWS_EC2_KEY }}
+     
 
 
     # name: CD
