--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -32,6 +32,9 @@ jobs:
        
      - name: "Push"
        run: docker push $DOCKER_USER/$IMAGE_NAME:1.0
+
+     - name: "ansible --version"
+       run: ansible --version
   CD:
     name: CD
     needs: [CI]
@@ -47,7 +50,7 @@ jobs:
         playbook: ${{env.PLAYBOOK}}
         #playbook: app_deploy_to_ec2.yml
         directory: /.
-        key: ${{env.AWS_EC2_KEY}}
+        #key: ${{env.AWS_EC2_KEY}}
         inventory: |
          [all]
          appserver ansible_host=18.195.101.221 ansible_user=ubuntu ansible_ssh_private_key_file=${{env.AWS_EC2_KEY}}
