--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,12 +2,12 @@ name: CI/CD - DOS07
 
 env:
   IMAGE_NAME: "my_py_app"
-  DOCKER_USER: ${{secrets.DOCKER_USER}}
-  DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-  AWS_ACCESS_KEY: ${{secrets.AWS_ACCESS_KEY_ID}}
-  AWS_SECRET_KEY: ${{secrets.AWS_SECRET_KEY_ID}}   
+  DOCKER_USER: ${{ secrets.DOCKER_USER }}
+  DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+  AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY_ID }}   
   PLAYBOOK: "app_deploy_to_ec2.yml"
-  AWS_EC2_KEY: ${{secrets.AWS_EC2_KEY}}   
+  AWS_EC2_KEY: ${{ secrets.AWS_EC2_KEY }}   
 on:
   push:
     branches:
@@ -44,27 +44,17 @@ jobs:
     - name: 'Checkout'
       uses: actions/checkout@main
 
-    - name: executing remote ssh commands using password
+    - name: RUN ansible
       uses: dawidd6/action-ansible-playbook@v2
       with:
-        playbook: ${{env.PLAYBOOK}}
+        playbook: ${{ env.PLAYBOOK }}
         #playbook: app_deploy_to_ec2.yml
-        directory: /.
+        #directory: /.
         #key: ${{env.AWS_EC2_KEY}}
         inventory: |
          [all]
-         appserver ansible_host=18.195.101.221 ansible_user=ubuntu ansible_ssh_private_key=${{env.AWS_EC2_KEY}}
+         appserver ansible_host=18.195.101.221 ansible_user=ubuntu ansible_ssh_private_key=${{ env.AWS_EC2_KEY }}
      
 
 
-    # name: CD
-    # runs-on: ubuntu-latest
-    # steps:
-    # - name: executing remote ssh commands using password
-    #   uses: appleboy/ssh-action@master
-    #   with:
-    #     host: ${{ env.HOST}}
-    #     username: ${{ env.USERNAME }}
-    #     password: ${{ secrets.PASSWORD }}
-    #     port: ${{ secrets.PORT }}
-    #     script: whoami
+    
