--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -66,7 +66,7 @@ jobs:
         key: ${{ env.AWS_EC2_KEY }}
         inventory: |
          [all]
-         appserver ansible_host=18.195.101.221 ansible_user=ubuntu 
+         appserver ansible_host=18.195.101.221 ansible_user=ubuntu ansible_ssh_private_key=${{ env.AWS_EC2_KEY }}
      
         # options: |
         #   -- verbose
