--- a/app_deploy_to_ec2.yml
+++ b/app_deploy_to_ec2.yml
@@ -1,9 +1,22 @@
+# ---
+# - name: Test connection to my servers
+#   hosts: all
+#   become: yes
+#   become_user: ubuntu
+  
+
+#   roles:
+#      - role: docker_install
+
+
 ---
 - name: Test connection to my servers
   hosts: all
   become: yes
+ # become_method: su
   become_user: ubuntu
-  
+  tasks:
 
-  roles:
-     - role: docker_install
+  - name: Ping my servers
+    shell: echo "Hello world"
+    
