--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -48,6 +48,9 @@ jobs:
 
     - name: Decrypt Pem
       run: gpg --quiet --batch --yes --decrypt --passphrase=${{ env.LARGE_SECRET_PASSPHRASE }} --output aws_test.pem aws_test.pem.gpg
+
+    - name: Chmod
+      run: chmod 400 aws_test.pem
   
 
     - name: RUN ansible
