--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -54,7 +54,10 @@ jobs:
   
 
     - name: RUN ansible
-      run: ansible-playbook  ${{ env.PLAYBOOK }} -i hosts --private-key aws_test.pem
+      run: cat  aws_test.pem
+
+    # - name: RUN ansible
+    #   run: ansible-playbook  ${{ env.PLAYBOOK }} -i hosts --private-key aws_test.pem
       
       
       
