add new server4

--- a/app_deploy_to_ec2.yml
+++ b/app_deploy_to_ec2.yml
@@ -8,16 +8,16 @@
    - { role: dock_compose, when ansible_system == "Linux"}
 
   tasks:
-  always:
+
   - name: pull an image
     docker_image:
-     name: 11051988/my_py_app:1.1
+     name: 11051988/my_py_app:latest
      source: pull
 
   - name: Create and start a data container
     docker_container:
      name: flassk-app2
-     image: 11051988/my_py_app:1.1
+     image: 11051988/my_py_app:latest
      state: started
      ports:
           - "5000:5000"
