--- a/app_deploy_to_ec2.yml
+++ b/app_deploy_to_ec2.yml
@@ -18,6 +18,6 @@
     docker_container:
      name: flassk-app2
      image: 11051988/my_py_app:latest
-     state: started
+     state: present
      ports:
           - "5000:5000"
