--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -30,16 +30,27 @@ jobs:
      - name: 'Testing by pytest'
        run:  pytest mytest.py
 
-     - name: 'docker login'
-       run: docker login -u  $DOCKER_USER -p $DOCKER_PASSWORD
+    #  - name: 'docker login'
+    #    run: docker login -u  $DOCKER_USER -p $DOCKER_PASSWORD
+
+
+    #  - name: "Build"
+    #    run: docker build -t $DOCKER_USER/$IMAGE_NAME:latest .
+            
+       
+    #  - name: "Push"
+    #    run: docker push $DOCKER_USER/$IMAGE_NAME:latest
+    #  - name: 'docker git login'
+    #    run: docker login -u  $DOCKER_USER -p $DOCKER_PASSWORD
 
 
      - name: "Build"
-       run: docker build -t $DOCKER_USER/$IMAGE_NAME:latest .
+       run: docker build . --tag ghcr.io/andovnar2021/$IMAGE_NAME:latest .
             
        
      - name: "Push"
-       run: docker push $DOCKER_USER/$IMAGE_NAME:latest
+       run: docker push ghcr.io/andovnar2021/$IMAGE_NAME:latest .
+       
      - name: "ansible --version"
        run: ansible --version
   CD:
